some updates for swagger
